# mocap4ros2_gazebo

./: CMakeLists.txt  README.md  dependency_repos.repos  package.xml
.github/workflows/: main.yaml
include/gazebo_plugins/: gazebo_ros_mocap.hpp
launch/: tb3_simulation_launch.py
models/: waffle.model
models/gazebo_mocap_plugin/meshes/: rigid_body.blend  rigid_body.blend1  rigid_body.dae
rviz/: config.rviz
src/: gazebo_ros_mocap.cpp
test/: CMakeLists.txt  test_gazebo_ros_mocap.cpp
urdf/: turtlebot3_waffle.urdf
