<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_mocap_plugin</name>
  <version>0.0.0</version>
  <description>
    Gazebo plugins for mocap
  </description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>

  <license>Apache 2.0</license>

  <author>Francisco Martín Rico</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mocap_msgs</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
